<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".screens.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/kastelov_axiforma_bold"
        android:text="@string/welcome_to"
        android:textAllCaps="true"
        android:textColor="@color/black_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/qar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/anitlles"
        android:text="@string/qar"
        android:textAllCaps="true"
        android:textColor="@color/orange_colour"
        android:textSize="33sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/qar_text"
        android:fontFamily="@font/anitlles"
        android:text="@string/service"
        android:textAllCaps="true"
        android:textSize="33sp" />

    <ImageView
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_below="@+id/welcome_text"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:src="@mipmap/final_logo" />

    <View
        android:id="@+id/orange_line"
        android:layout_width="19dp"
        android:layout_height="8dp"
        android:layout_below="@+id/qar_text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/orange_colour" />

    <View
        android:layout_width="42dp"
        android:layout_height="8dp"
        android:layout_below="@+id/qar_text"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/orange_line"
        android:background="@color/black_color" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orange_line"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/kastelov_axiforma_semibold"
        android:text="@string/email_address"
        android:textColor="@color/black_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/cardview_border_background"
        android:fontFamily="@font/kastelov_axiforma_medium"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingTop="17dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black_dot_color"
        android:textColorHint="@color/black_dot_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit_text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/kastelov_axiforma_semibold"
        android:text="@string/password"
        android:textColor="@color/black_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/cardview_border_background"
        android:fontFamily="@font/kastelov_axiforma_medium"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingTop="17dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black_dot_color"
        android:textColorHint="@color/black_dot_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/kastelov_axiforma_medium"
        android:text="@string/forget_password"
        android:textColor="@color/orange_colour"
        android:textSize="16sp" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/orange_colour"
        android:fontFamily="@font/kastelov_axiforma_bold"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black_color"
        android:textSize="18sp" />

</RelativeLayout>