<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appoint_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9.75dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/kastelov_axiforma_semibold"
            android:text="@string/appoint_no_2526352"
            android:textColor="@color/black_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/date_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/kastelov_axiforma_regular"
            android:text="@string/date_on_card"
            android:textColor="@color/black_dot_color"
            android:textSize="10sp" />

        <View
            android:id="@+id/view_line_one"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/date_and_time"
            android:layout_marginTop="11.5dp"
            android:background="@color/silver_dark" />

        <TextView
            android:id="@+id/car_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line_one"
            android:layout_marginStart="9.75dp"
            android:layout_marginTop="13.5dp"
            android:fontFamily="@font/kastelov_axiforma_semibold"
            android:text="@string/engine_oil_change"
            android:textColor="@color/black_color"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/person_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/car_service"
            android:layout_marginStart="9.75dp">

            <TextView
                android:id="@+id/person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/kastelov_axiforma_medium"
                android:text="@string/john_doe"
                android:textColor="@color/black_dot_color"
                android:textSize="14sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dot_image"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12.25dp"
                android:layout_toEndOf="@+id/person_name"
                android:src="@color/black_dot_color" />

            <TextView
                android:id="@+id/car_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12.25dp"
                android:layout_toEndOf="@id/dot_image"
                android:fontFamily="@font/kastelov_axiforma_medium"
                android:text="@string/sedan"
                android:textColor="@color/black_dot_color"
                android:textSize="14sp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/vehicle_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_frame"
            android:layout_marginStart="9.75dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/kastelov_axiforma_medium"
            android:text="@string/vehicle_no_qatar_256356"
            android:textColor="@color/black_dot_color" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vehicle_no"
            android:layout_marginStart="9.75dp"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/kastelov_axiforma_semibold"
            android:text="@string/_410_qar"
            android:textColor="@color/orange_colour" />

        <View
            android:id="@+id/view_line_two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/price"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:background="@color/silver_dark" />

        <TextView
            android:id="@+id/garage_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line_two"
            android:layout_marginStart="9.75dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/kastelov_axiforma_semibold"
            android:text="@string/abc_garage"
            android:textColor="@color/black_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/garage_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/garage_name"
            android:layout_marginStart="9.75dp"
            android:fontFamily="@font/kastelov_axiforma_medium"
            android:text="@string/sector_63_noida"
            android:textColor="@color/black_dot_color"
            android:textSize="14sp" />

        <View
            android:id="@+id/view_line_three"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/garage_address"
            android:layout_marginTop="12dp"
            android:background="@color/silver_dark" />

        <TextView
            android:id="@+id/view_job_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line_three"
            android:text="@string/view_job_details"
            android:layout_marginTop="13.5dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/kastelov_axiforma_medium"
            android:textAlignment="center"
            android:textColor="@color/orange_colour"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/view_line_one"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/circle_background_orange" />

        <ImageView
            android:id="@+id/car_image_two"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@+id/view_line_three"
            android:layout_below="@+id/view_line_two"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/circle_background_orange" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>